# MW2

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  pytest.ini
makerworks/backend/: alembic.ini  pyproject.toml  requirements.txt
makerworks/backend/alembic/: env.py
makerworks/backend/alembic/versions/: 0001_api_keys_webhooks.py  0001_initial.py  0002_notifications.py  0002_user_inventory.py  0003_model_thumbnail.py  0003_themes.py
makerworks/backend/app/: amazon.py  audit.py  config.py  db.py  inventory.py  main.py  models.py  plugins.py  security.py  seed.py  thumbnail.py  worker.py
makerworks/backend/app/api/: deps.py
makerworks/backend/app/api/api_v1/: api.py
makerworks/backend/app/api/api_v1/routes/: admin.py  amazon.py  apikeys.py  auth.py  cart.py  checkout.py  compliance.py  inventory.py  messaging.py  models.py  notifications.py  (+7 more)
makerworks/backend/app/models/: __init__.py  models.py
makerworks/backend/app/printing/: __init__.py  bambu.py  base.py  octoprint.py
makerworks/backend/app/services/: notifications.py
makerworks/backend/scripts/: generate_openapi.py  seed_demo.py
makerworks/backend/tests/: sample_plugin.py  test_amazon.py  test_apikey_webhook.py  test_apikeys_import_export.py  test_auth.py  test_cache.py  test_compliance.py  test_graphql.py  test_inventory.py  test_metrics.py  test_models.py  test_models_api.py  test_notifications.py  test_orgs_messages.py  test_ping.py  test_plugins.py  test_printing.py  test_rate_limit.py  test_security.py  test_seed.py  test_store.py  test_themes.py
(+61 files in other folders)
