[project]
name = "makerworks-backend"
version = "0.1.0"
description = "MakerWorks backend service"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "pydantic>=2.0",
    "pydantic-settings",
    "psycopg[binary]",
    "redis",
    "rq",
    "strawberry-graphql",
    "httpx",
    "passlib[bcrypt]",
    "itsdangerous",
    "pyotp",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
